--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,42 @@
-/**/
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: black;
+}
+
+.button-box {
+  border-radius: 10px;
+  padding: 20px;
+  margin-top: 20px;
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  background-color: rgba(170, 170, 170, 0.4);
+}
+
+.btn-primary {
+  background-color: red;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  padding: 15px 30px;
+  margin-top: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  width: 100%;
+  font-family:'Courier New', Courier, monospace;
+}
+
+.btn-primary:hover {
+  background-color: darkred;
+}
+
+h2 {
+  font-size: 24px;
+  color: rgb(255, 255, 255);
+  font-family: 'Courier New', Courier, monospace;
+}
 
